[metadata]
# replace with your username:
name = snowpipe-cli-paladin235
version = 0.0.1
author = Daniel Pierce
author_email = paladin2350@gmail.com
description = A CLI utility for Snowflake Snowpipe REST APIs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/phdata/snowpipe-cli
project_urls =
    Bug Tracker = https://github.com/phdata/snowpipe-cli/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src